[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/bg/bg_room.png" type="Texture" id=1]
[ext_resource path="res://puppet.tres" type="Theme" id=2]
[ext_resource path="res://Assets/icons/back.png" type="Texture" id=3]
[ext_resource path="res://Assets/icons/play.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Room.gd" type="Script" id=5]
[ext_resource path="res://Scripts/EnableStartButton.gd" type="Script" id=6]
[ext_resource path="res://Scripts/LeaveButton.gd" type="Script" id=7]
[ext_resource path="res://Fonts/GermaniaOne-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/players/player-base.png" type="Texture" id=9]
[ext_resource path="res://Assets/icons/info.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/GermaniaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.670588, 0.533333, 0.2, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.235294, 0.235294, 0.235294, 0.431373 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Poppins/Poppins-Medium.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/GermaniaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 36
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 36
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 36
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0.568627, 0.0588235, 1 )
border_width_bottom = 60
border_color = Color( 0.870588, 0.329412, 0.0392157, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.968627, 0.533333, 0.0196078, 1 )
border_width_bottom = 70
border_color = Color( 0.717647, 0.392157, 0.00784314, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Fonts/GermaniaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=17]
size = 400
font_data = SubResource( 16 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 0.568627, 0.0588235, 1 )
border_width_bottom = 5
border_color = Color( 0.870588, 0.329412, 0.0392157, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.968627, 0.533333, 0.0196078, 1 )
border_width_bottom = 8
border_color = Color( 0.717647, 0.392157, 0.00784314, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_bottom = 5.0

[sub_resource type="DynamicFontData" id=20]
font_path = "res://Fonts/GermaniaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=21]
font_data = SubResource( 20 )

[node name="Room" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -596.265
margin_top = -298.751
margin_right = 655.735
margin_bottom = 335.249
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InformationBG" type="Control" parent="."]
anchor_right = 1.009
anchor_bottom = 0.767
margin_right = -868.1
margin_bottom = -650.3
rect_scale = Vector2( 1.15, 1.15 )

[node name="GameStatus" type="Control" parent="."]
anchor_left = 0.104
anchor_top = 0.087
anchor_right = 0.909
anchor_bottom = 0.699
margin_left = 0.400002
margin_top = 62.7
margin_right = -0.100098
margin_bottom = 62.9
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GameStatus"]
margin_left = 120.901
margin_top = -59.239
margin_right = 834.901
margin_bottom = 4.76099
rect_pivot_offset = Vector2( 313.597, 32 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.156863, 0.152941, 0.156863, 1 )
text = "Estado del juego"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Room" type="Control" parent="GameStatus"]
anchor_left = 0.014
anchor_top = 0.127
anchor_right = 0.014
anchor_bottom = 0.127
margin_left = -0.136001
margin_top = 0.022995
margin_right = 243.864
margin_bottom = 45.023

[node name="room" type="Panel" parent="GameStatus/Room"]
margin_left = -6.8252
margin_top = 14.4126
margin_right = 240.175
margin_bottom = 67.4126
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clipboard" type="Label" parent="GameStatus/Room"]
visible = false
margin_left = 255.164
margin_top = 20.5422
margin_right = 575.164
margin_bottom = 57.5422
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Copiado en portapapeles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameStatus/Room"]
anchor_bottom = 1.0
margin_left = 3.1748
margin_top = 17.8252
margin_right = 125.175
margin_bottom = 17.8252
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.941176, 0.803922, 0.462745, 1 )
text = "ID:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomId" type="Label" parent="GameStatus/Room"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -197.394
margin_top = 15.8914
margin_right = -19.3938
margin_bottom = 15.8914
focus_mode = 1
mouse_filter = 1
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.941176, 0.803922, 0.462745, 1 )
text = "10"
align = 2
valign = 1

[node name="Host" type="Control" parent="GameStatus"]
anchor_left = 0.993
anchor_top = 0.127
anchor_right = 0.993
anchor_bottom = 0.127
margin_left = -398.932
margin_top = 0.022995
margin_right = -1.93201
margin_bottom = 45.023

[node name="Label" type="Label" parent="GameStatus/Host"]
anchor_bottom = 1.0
margin_left = 140.37
margin_top = 10.0
margin_right = 339.37
margin_bottom = 9.99999
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.156863, 0.152941, 0.156863, 1 )
text = "Host:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostName" type="Label" parent="GameStatus/Host"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -217.0
margin_top = 12.0
margin_right = -16.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.168627, 0.156863, 0.00392157, 1 )
text = "Pamela"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player-avatar" type="Control" parent="GameStatus"]
margin_left = 81.4983
margin_top = 168.748
margin_right = 896.498
margin_bottom = 340.748
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="TextureRect" parent="GameStatus/player-avatar"]
margin_left = 172.0
margin_right = 283.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 19, 55.9103 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="TextureRect" parent="GameStatus/player-avatar"]
margin_left = 14.0
margin_right = 125.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 19, 55.9103 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player3" type="TextureRect" parent="GameStatus/player-avatar"]
margin_left = 348.0
margin_right = 459.0
margin_bottom = 160.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4" type="TextureRect" parent="GameStatus/player-avatar"]
margin_left = 524.0
margin_top = -1.0
margin_right = 635.0
margin_bottom = 159.0
rect_pivot_offset = Vector2( 96.9049, 38.1 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player5" type="TextureRect" parent="GameStatus/player-avatar"]
margin_left = 700.0
margin_right = 811.0
margin_bottom = 160.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNames" type="Control" parent="GameStatus"]
anchor_top = 0.269
anchor_right = 0.978
anchor_bottom = 0.956
margin_left = 95.4983
margin_top = 125.917
margin_right = -48.7605
margin_bottom = -40.4867
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName1" type="Label" parent="GameStatus/PlayerNames"]
margin_left = 5.0
margin_top = 57.0
margin_right = 105.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jugador 1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName2" type="Label" parent="GameStatus/PlayerNames"]
margin_left = 163.0
margin_top = 57.0
margin_right = 265.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jugador 2"
align = 1
valign = 1
autowrap = true

[node name="PlayerName3" type="Label" parent="GameStatus/PlayerNames"]
margin_left = 339.0
margin_top = 57.0
margin_right = 440.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jugador 3"
align = 1
valign = 1
autowrap = true

[node name="PlayerName4" type="Label" parent="GameStatus/PlayerNames"]
margin_left = 514.0
margin_top = 57.0
margin_right = 616.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jugador 4"
align = 1
valign = 1

[node name="PlayerName5" type="Label" parent="GameStatus/PlayerNames"]
margin_left = 691.0
margin_top = 57.0
margin_right = 792.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jugador 5"
align = 1
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="GameStatus"]
margin_left = -38.0204
margin_top = 368.413
margin_right = 39.9796
margin_bottom = 446.413
texture = ExtResource( 10 )

[node name="Requirement" type="Label" parent="GameStatus"]
anchor_top = 0.751
anchor_right = 1.0
anchor_bottom = 0.911
margin_left = 47.9796
margin_top = 104.495
margin_right = -317.52
margin_bottom = 104.711
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.156863, 0.152941, 0.156863, 1 )
text = "Se necesitan al menos 5 jugadores para comenzar"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Control" parent="."]
anchor_top = 0.779
anchor_bottom = 0.779
margin_left = 788.0
margin_top = -10.4
margin_right = 3188.0
margin_bottom = 599.6
rect_scale = Vector2( 0.2, 0.2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeginButton" type="Button" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 995.0
margin_top = 84.0
margin_right = -840.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( -859, -144 )
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 17 )
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1083.41
margin_top = -561.951
margin_right = -985.413
margin_bottom = -476.951
custom_styles/hover = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 21 )
icon = ExtResource( 3 )
expand_icon = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="GameStatus/Room/RoomId" to="GameStatus" method="_on_RoomId_mouse_entered"]
[connection signal="pressed" from="TextureRect/BeginButton" to="TextureRect" method="_on_BeginButton_pressed"]
[connection signal="pressed" from="LeaveButton" to="LeaveButton" method="_on_LeaveButton_pressed"]
